<resources>
    <string name="app_name">DOMUM</string>
    <string name="continue_button_description">Continue Button</string>
    <string name="house_logo">House Logo</string>
    <string name="welcome_text">Welcome Text</string>
    <string name="add_new_button_description">Add New Item Button</string>
    <string name="browse_by_room_button_description">Browse By Room Button</string>
    <string name="browse_by_category_button_description">Browse By Category Button</string>
    <string name="view_all_items_button_description">View All Items Button</string>
    <string name="export_button_description">Export Button</string>
    <string name="add_new_category_button_description">Add New Category Button</string>
    <string name="add_new_room_button_description">Add New Room Button</string>
    <string name="room_page_text">Room Page Text</string>
    <string name="category_page_text">Category Page Text</string>
    <string name="num_items_text">Number of Items Text</string>
    <string name="room">ROOM:</string>
    <string name="category">CATEGORY:</string>
    <string name="str_num_of_items"># OF ITEMS</string>
    <string name="hamburger_button_description">Hamburger Button</string>
    <string name="all_items">All Items</string>
    <string name="export">export</string>
    <string name="add_new_item">Add New Item</string>
    <string name="update_item">Update Item</string>
    <string name="name_text">Name</string>
    <string name="room_text">Room</string>
    <string name="category_text">Category</string>
    <string name="column_header_font_size">16sp</string>
    <string name="pop_up_add_new_room">Enter Room Name</string>
    <string name="add_new_category_pop_up">Enter New Category</string>
    <string name="PREFERENCE_FILE_KEY">com.example.team09app.PREFERENCE_FILE_KEY</string>
    <string name="CURRENT_STATE">currentState</string>
    <string name="price_text">$ 0.00</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="browse_by_category">Browse By Category</string>
    <string name="browse_by_room">Browse By Room</string>
    <string name="hint_word">Name...</string>
    <string name="empty_not_saved">Item not saved because it is empty.</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="button_cancel">Cancel</string>
    <string name="action_share">Share File</string>
    <string name="share_file">Export the File</string>
</resources>
