<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue">

    <TextView
        android:id="@+id/numItems_text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/num_items_text"
        android:ems="10"
        android:inputType="none"
        android:text="@string/str_num_of_items"
        android:textAlignment="textEnd"
        android:textColor="@color/White"
        android:textSize="@dimen/column_header_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_img" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/hamburger_button_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hamburger_btnxhdpi" />

    <ImageView
        android:id="@+id/house_img"
        android:layout_width="150dp"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/house_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/house_logoxhdpi" />

    <TextView
        android:id="@+id/roomPage_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/room_page_text"
        android:ems="10"
        android:inputType="none"
        android:singleLine="false"
        android:text="@string/room"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textIsSelectable="false"
        android:textSize="@dimen/column_header_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/numItems_text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_img"
        tools:textIsSelectable="false" />

    <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numItems_text2" />

    <ImageButton
        android:id="@+id/addNewRoom_btn_id"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="16dp"
        android:background="@color/Blue"
        android:contentDescription="@string/add_new_room_button_description"
        android:cropToPadding="false"
        android:onClick="addNewRoom"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/add_new_room_btnxhdpi" />

</android.support.constraint.ConstraintLayout>