<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_item_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue"
    tools:context=".AddNewItem">


    <EditText
        android:id="@+id/purchaseDate"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/purchase_date"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintStart_toEndOf="@+id/priceText"
        app:layout_constraintTop_toBottomOf="@+id/nameText3" />

    <EditText
        android:id="@+id/priceText"
        android:layout_width="141dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/price_text"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText3" />

    <EditText
        android:id="@+id/nameText3"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/category_text"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText2" />

    <EditText
        android:id="@+id/nameText2"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/room_text"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <ImageView
        android:id="@+id/camera_btn_id_add"
        android:layout_width="249dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:background="@color/Blue"
        android:clickable="true"
        android:contentDescription="@string/export_button_description"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_text_id" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/name_text"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_btn_id_add" />

    <include
        android:id="@+id/menu_overlay_id"
        layout="@layout/main_menu_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_text_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_text_to_header_dim"
        android:contentDescription="@string/room_page_text"
        android:ems="10"
        android:inputType="none"
        android:singleLine="false"
        android:text="@string/add_new_item"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textIsSelectable="false"
        android:textSize="@dimen/column_header_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:textIsSelectable="false" />

    <include
        android:id="@+id/title"
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>