<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue"
    tools:context=".AddNewItem">

    <EditText
        android:id="@+id/purchaseDate"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/purchase_date"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintStart_toEndOf="@+id/priceText"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <EditText
        android:id="@+id/priceText"
        android:layout_width="141dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/price_text"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText3" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        app:srcCompat="@drawable/add_btnxhdpi" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/nameText3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5"
        app:srcCompat="@drawable/drop_down_btnxhdpi" />

    <EditText
        android:id="@+id/nameText3"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/category_text"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText2" />

    <EditText
        android:id="@+id/nameText2"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/room_text"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/hamburger_button_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hamburger_btnxhdpi" />

    <ImageView
        android:id="@+id/house_img"
        android:layout_width="150dp"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/house_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/house_logoxhdpi" />

    <TextView
        android:id="@+id/addNewItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/room_page_text"
        android:ems="10"
        android:inputType="none"
        android:singleLine="false"
        android:text="@string/add_new_item"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textIsSelectable="false"
        android:textSize="@dimen/column_header_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_img"
        tools:textIsSelectable="false" />

    <ImageButton
        android:id="@+id/camera_btn_id"
        android:layout_width="249dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:background="@color/Blue"
        android:contentDescription="@string/export_button_description"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewItem"
        app:srcCompat="@drawable/take_picture_btnxhdpi" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/name_text"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_btn_id" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        app:srcCompat="@drawable/add_btnxhdpi" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/nameText2"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        app:srcCompat="@drawable/drop_down_btnxhdpi" />


</android.support.constraint.ConstraintLayout>