<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/Blue"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/Item_Viewer"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/house_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/house_logoxhdpi" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/hamburger_button_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hamburger_btnxhdpi" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:text="@string/all_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</android.support.constraint.ConstraintLayout>