<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu_overlay_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBlue_opaque"
    android:visibility="visible"
    tools:context=".MainMenuOverlay">

    <ScrollView
        android:id="@+id/main_menu_scrollview_id"
        android:layout_width="400dp"
        android:layout_height="610dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/add_new_item_btn_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:background="@color/clear"
                android:clickable="false"
                android:contentDescription="@string/add_new_button_description"
                android:onClick="addNewItem"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/add_new_item_btnxhdpi"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="719dp" />

            <ImageButton
                android:id="@+id/browse_by_room_btn_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:background="@color/clear"
                android:clickable="false"
                android:contentDescription="@string/browse_by_room_button_description"
                android:onClick="browseByRoom"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/browse_by_room_btnxhdpi" />

            <ImageButton
                android:id="@+id/browse_by_category_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:background="@color/clear"
                android:clickable="false"
                android:contentDescription="@string/browse_by_category_button_description"
                android:onClick="browseByCategory"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/browse_by_category_btnxhdpi" />

            <ImageButton
                android:id="@+id/view_all_items_btn_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:background="@color/clear"
                android:clickable="false"
                android:contentDescription="@string/view_all_items_button_description"
                android:onClick="viewAllItems"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/view_all_items_btnxhdpi" />

            <ImageButton
                android:id="@+id/export_btn_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:background="@color/clear"
                android:clickable="false"
                android:contentDescription="@string/export_button_description"
                android:onClick="export"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/export_btnxhdpi" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>