<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue"
    tools:context=".Export">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hamburger_btnxhdpi" />

    <ImageView
        android:id="@+id/house_img"
        android:layout_width="150dp"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/house_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/house_logoxhdpi" />

    <ImageButton
        android:id="@+id/pdf_btn_id"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="36dp"
        android:background="@color/Blue"
        android:contentDescription="@string/export_button_description"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exportPage_text"
        app:srcCompat="@drawable/export_pdf_btnxhdpi" />

    <ImageButton
        android:id="@+id/export_btn_id"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:background="@color/Blue"
        android:contentDescription="@string/export_button_description"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pdf_btn_id"
        app:srcCompat="@drawable/export_excel_btnxhdpi" />

    <include
        android:id="@+id/menu_overlay_id"
        layout="@layout/main_menu_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exportPage_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/room_page_text"
        android:ems="10"
        android:inputType="none"
        android:singleLine="false"
        android:text="Export Options"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textIsSelectable="false"
        android:textSize="@dimen/column_header_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:textIsSelectable="false" />

    <include
        android:id="@+id/title"
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>